--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>🎮 Super Mario Bros</title>
   </head>
   <body>
+    <div id="mario">
+      <div id="score" style="background-color: #FFFFAC; width: 640px; visibility: hidden;">Score: <span class="score-amount">0</span></div>
+    </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
