--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <body>
     <div id="mario">
       <div id="score" style="background-color: #FFFFAC; width: 640px; visibility: hidden;">Score: <span class="score-amount">0</span></div>
+      <div id="lives" style="background-color: #FFFFAC; width: 640px; visibility: hidden;">Lives: <span class="lives-amount">3</span></div>
+
     </div>
+    
+  
     <script src="src/index.js"></script>
   </body>
 </html>
